tests/ui/extenv/extenv-not-string-literal.stderr
error: expected string literal
  --> $DIR/extenv-not-string-literal.rs:1:18
   |
LL | fn main() { env!(10, "two"); }
   |                  ^^

error: aborting due to previous error

